--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;1,300&family=Rubik:wght@500&display=swap");
+
+body {
+  background-color: #0f172a;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-family: "Rubik", sans-serif;
+}
