--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;1,300&family=Rubik:wght@500&display=swap");
 
 :root {
-  --background-color: #0f172a;
+  --background-color: #020617;
   --text-color: white;
   --font-primary: "Poppins", sans-serif;
   --font-secondary: "Rubik", sans-serif;
